==> MillerRen/grbl-learning/grbl/stepper.c <==
#include "grbl.h"
#define DT_SEGMENT (1.0/(ACCELERATION_TICKS_PER_SECOND*60.0)) // 分钟/段
#define REQ_MM_INCREMENT_SCALAR 1.25
#define RAMP_ACCEL 0
#define RAMP_CRUISE 1
#define RAMP_DECEL 2
#define RAMP_DECEL_OVERRIDE 3
#define PREP_FLAG_RECALCULATE bit(0)
#define PREP_FLAG_HOLD_PARTIAL_BLOCK bit(1)
#define PREP_FLAG_PARKING bit(2)
#define PREP_FLAG_DECEL_OVERRIDE bit(3)
	#define MAX_AMASS_LEVEL 3
	#define AMASS_LEVEL1 (F_CPU/8000) //Over-drives ISR（x2）。定义为F_CPU/（截止频率，单位为Hz）
	#define AMASS_LEVEL2 (F_CPU/4000) // Over-drives ISR (x4)
	#define AMASS_LEVEL3 (F_CPU/2000) // Over-drives ISR (x8)

void st_wake_up()
{
  //启用步进驱动程序。
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); }
  else { STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); }

  //初始化步进器输出位，以确保第一次ISR调用不步进。
  st.step_outbits = step_port_invert_mask;

  //从设置中初始化步进脉冲定时。此处用于确保重新写入后进行更新。
  #ifdef STEP_PULSE_DELAY
    //设置方向引脚设置后的总步进脉冲时间。从示波器进行特别计算。
    st.step_pulse_time = -(((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
    //设置方向引脚写入和步进命令之间的延迟。
    OCR0A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
  #else // Normal operation
    // 设置步进脉冲时间。 从示波器进行特别计算。 使用二的补？。
    st.step_pulse_time = -(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
  #endif

  //启用步进驱动程序中断
  TIMSK1 |= (1<<OCIE1A);
}

void st_go_idle()
{
  //禁用步进驱动程序中断。如果激活，允许步进器端口重置中断完成。
  TIMSK1 &= ~(1<<OCIE1A); //禁用定时器1中断
  TCCR1B = (TCCR1B & ~((1<<CS12) | (1<<CS11))) | (1<<CS10); //将时钟重置为无预刻度。
  busy = false;

  //根据设置和环境，设置步进驱动程序空闲状态、禁用或启用。
  bool pin_state = false; //保持启用状态。
  if (((settings.stepper_idle_lock_time != 0xff) || sys_rt_exec_alarm || sys.state == STATE_SLEEP) && sys.state != STATE_HOMING) {
    //强制步进电机保持锁定轴一段规定的时间，以确保轴完全停止，并且在最后一次移动结束时不会从残余惯性力中漂移。
    delay_ms(settings.stepper_idle_lock_time);
    pin_state = true; // 覆盖， 禁用步进器。
  }
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { pin_state = !pin_state; } //应用引脚反转。
  if (pin_state) { STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); }
  else { STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); }
}

void stepper_init()
{
  //配置步进和方向接口引脚
  STEP_DDR |= STEP_MASK;
  STEPPERS_DISABLE_DDR |= 1<<STEPPERS_DISABLE_BIT;
  DIRECTION_DDR |= DIRECTION_MASK;
  
  #ifdef ENABLE_DUAL_AXIS
    STEP_DDR_DUAL |= STEP_MASK_DUAL;
    DIRECTION_DDR_DUAL |= DIRECTION_MASK_DUAL;
  #endif

  //配置定时器1：步进驱动程序中断
  TCCR1B &= ~(1<<WGM13); // waveform generation = 0100 = CTC
  TCCR1B |=  (1<<WGM12);
  TCCR1A &= ~((1<<WGM11) | (1<<WGM10));
  TCCR1A &= ~((1<<COM1A1) | (1<<COM1A0) | (1<<COM1B1) | (1<<COM1B0)); // 断开OC1输出
  // TCCR1B = (TCCR1B & ~((1<<CS12) | (1<<CS11))) | (1<<CS10); // 在st_go_idle（）中设置。
  // TIMSK1 &= ~(1<<OCIE1A);  // 在st_go_idle（）中设置。

  //配置计时器0：步进器端口重置中断
  TIMSK0 &= ~((1<<OCIE0B) | (1<<OCIE0A) | (1<<TOIE0)); //断开OC0输出和OVF中断。
  TCCR0A = 0; //正常运行
  TCCR0B = 0; //在需要时禁用计时器0
  TIMSK0 |= (1<<TOIE0); //启用定时器0溢出中断
  #ifdef STEP_PULSE_DELAY
    TIMSK0 |= (1<<OCIE0A); //启用定时器0比较匹配中断
  #endif
}
